add allIncoming and interestSent
